objects/Campaign_Project__c.object
<CustomObject>
    <description>This Object is the Junction Object between Campaign and MW_Projects.</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Campaign_Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Duplicate_Campaign_Association__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is to prevent that the same Campaign can only be added once to the project.</description>
        <label>Duplicate Campaign Association</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>MW_Project__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaign_Projects</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Campaign Project Relationship</label>
    <nameField>
        <displayFormat>CP-{0000000000}</displayFormat>
        <label>Campaign Project Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Project Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>